# simpleonvif

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: rust.yml
examples/: cli.rs
src/: auth.rs  camera.rs  error.rs  lib.rs  main.rs  namespaces.rs  onvif.rs
tests/: test_camera.rs
tests/captures/: get_profiles_response_hzsoar.xml  get_profiles_response_tplink.xml
