[package]
name = "simpleonvif"
version = "0.1.0"
authors = ["Franck Parat <franck.parat@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = "1.3"
xml-rs = "0.8"
chrono = "0.4"
rand = "0.7"
clap = "3.0.0-beta.1"
rust-crypto = "^0.2"
base64 = "0.12"
regex = "1"
log = "0.4"
env_logger = "0.7"
thiserror = "1.0"
anyhow = "1.0"
url = "2"
