[package]
name = "simpleonvif"
version = "0.1.0"
authors = ["Franck Parat <franck.parat@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = "1.3"
chrono = "0.4"
rand = "0.7"
rust-crypto = "^0.2"
base64 = "0.12"
log = "0.4"
thiserror = "1.0"
url = "2"
roxmltree = "0.13"

[dev-dependencies]
# Tests dependencies
mockito = "0.26"

# Examples dependencies
clap =  "3.0.0-beta.1"
env_logger = "0.7"
anyhow = "1.0"

[lib]
name = "simpleonvif"

[[example]]
name = "cli"
